# TypeScript

./: .c8rc.json  .dockerignore  .dprint.jsonc  .editorconfig  .envrc  .eslintignore  .eslintplugin.js  .eslintrc  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gulp.js  .lsifrc.json  .mailmap  .npmignore  .npmrc  .prettierrc  .travis.yml  AGENTS.md  AI_DIAGNOSTICS_GUIDE.md  API-Documentation.md  AUTHORS.md  All Cam  CHANGES-AI.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING-AI.md  CONTRIBUTING.md  CONTRIBUTING_CODE.md  CONTRIBUTING_TESTS.md  Cargo.toml  CopyrightNotice.txt  Dockerfile  FUNDING.yml  Gulpfile.js  Gulpfile.mjs  Gulpfile.ts  Herebyfile.mjs  (+76 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: codecov.yml  copilot-instructions.md  dependabot.yml  fabricbot.json  issue_template.md  pr_owners.txt  pull_request_template.md  tsc.json
NoNameSpace/: README.md  continueRemoveNamespace.ts  createNamespaceLikeFile.ts  index.ts  namespacePath.json  namespaceScan.ts  package.json  tsconfig.json  vscodeFixAutoImports.js
doc/: README.md  TypeScript Language Specification (Change Markup).docx  TypeScript Language Specification.docx  c  header.md  spec-ARCHIVED.md  spec.md
examples/: vscode-ai-type-centralization.ts
external-declarations/: .gitignore  fixed-tests.json  fixed-tests.jsonc  original-tests.jsonc  package.json  readme.md
lib/: .gitattributes  README.md  _tsserver.js  _typingsInstaller.js  cancellationToken.js  cancellationToken.js.map  diagnosticMessages.generated.json  lib.core.d.ts  (+138 more)
(+131710 files in other folders)
